--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
     <title>Broadway Design</title>
   </head>
   <body>
+    <div class="header">
+      <h1>Broadway Design</h1>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Process</a></li>
+        <li><a href="#">Work</a></li>
+        <li><a href="#">Team</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </div>
+
+    
 
   </body>
 </html>
