--- a/index.html
+++ b/index.html
@@ -10,14 +10,37 @@
       <h1>Broadway Design</h1>
       <ul>
         <li><a href="#">Home</a></li>
-        <li><a href="#">Process</a></li>
+        <li><a href="#process">Process</a></li>
         <li><a href="#">Work</a></li>
         <li><a href="#">Team</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
     </div>
+    <div id="process">
+      <h2>Our Process</h2>
+      <div id="identify">
+        <img src="./resources/images/identify.svg" alt="Identify icon">
+        <h3>Identify</h3>
+        <p>We focus on the most important details.</p>
+      </div>
+      <div id="understand">
+        <img src="./resources/images/understand.svg" alt="Understand icon">
+        <h3>Understand</h3>
+        <p>We study our projects inside and out.</p>
+        <div id="execute">
+          <img src="./resources/images/execute.svg" alt="Execute icon">
+          <h3>Execute</h3>
+          <p>We put everything we have into our work.</p>
+        </div>
+        <div class="panel">
+          <h3>Designed in New York</h3>
+        </div>
 
-    
+      </div>
+    </div>
+
+
+
 
   </body>
 </html>
