--- a/index.html
+++ b/index.html
@@ -27,20 +27,33 @@
         <img src="./resources/images/understand.svg" alt="Understand icon">
         <h3>Understand</h3>
         <p>We study our projects inside and out.</p>
-        <div id="execute">
-          <img src="./resources/images/execute.svg" alt="Execute icon">
-          <h3>Execute</h3>
-          <p>We put everything we have into our work.</p>
-        </div>
-        <div class="panel">
-          <h3>Designed in New York</h3>
-        </div>
-
+      </div>
+      <div id="execute">
+        <img src="./resources/images/execute.svg" alt="Execute icon">
+        <h3>Execute</h3>
+        <p>We put everything we have into our work.</p>
       </div>
     </div>
+    <div class="panel">
+      <h3>Designed in New York</h3>
+    </div>
+    <div class="information">
+      <div id="portfolio">
+        <h3>Portfolio</h3>
+        <p>Coming soon</p>
+      </div>
+      <div id="team">
+        <h3>Team</h3>
+        <p>We're Hiring!</p>
+      </div>
+      <div id="contact">
+        <h3>Contact</h3>
+        <p>Phone: (555)-555-555</p>
+        <p>E-mail: test@example.com</p>
+        <p>Twitter: @test</p>
+      </div>
 
-
-
+    </div>
 
   </body>
 </html>
