--- a/index.html
+++ b/index.html
@@ -52,8 +52,16 @@
         <p>E-mail: test@example.com</p>
         <p>Twitter: @test</p>
       </div>
-
     </div>
-
+    <div class="footer">
+      <ul>
+        <li>&copy; Broadway 2016</li>
+        <li><a href="#">Home</a></li>
+        <li><a href="#process">About</a></li>
+        <li><a href="#">Work</a></li>
+        <li><a href="#">Team</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </div>
   </body>
 </html>
