--- a/index.html
+++ b/index.html
@@ -6,38 +6,35 @@
     <title>Broadway Design</title>
   </head>
   <body>
-    <div class="header">
+
+    <div id="header">
       <h1>Broadway Design</h1>
       <ul>
-        <li><a href="#">Home</a></li>
+        <li><a href="#header">Home</a></li>
         <li><a href="#process">Process</a></li>
-        <li><a href="#">Work</a></li>
-        <li><a href="#">Team</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="#portfolio">Work</a></li>
+        <li><a href="#team">Team</a></li>
+        <li><a href="#contact">Contact</a></li>
       </ul>
     </div>
+
     <div id="process">
       <h2>Our Process</h2>
-      <div id="identify">
         <img src="./resources/images/identify.svg" alt="Identify icon">
         <h3>Identify</h3>
         <p>We focus on the most important details.</p>
-      </div>
-      <div id="understand">
         <img src="./resources/images/understand.svg" alt="Understand icon">
         <h3>Understand</h3>
         <p>We study our projects inside and out.</p>
-      </div>
-      <div id="execute">
         <img src="./resources/images/execute.svg" alt="Execute icon">
         <h3>Execute</h3>
         <p>We put everything we have into our work.</p>
-      </div>
     </div>
+
     <div class="panel">
       <h3>Designed in New York</h3>
     </div>
-    <div class="information">
+
       <div id="portfolio">
         <h3>Portfolio</h3>
         <p>Coming soon</p>
@@ -52,15 +49,15 @@
         <p>E-mail: test@example.com</p>
         <p>Twitter: @test</p>
       </div>
-    </div>
+
     <div class="footer">
       <ul>
         <li>&copy; Broadway 2016</li>
-        <li><a href="#">Home</a></li>
+        <li><a href="#header">Home</a></li>
         <li><a href="#process">About</a></li>
-        <li><a href="#">Work</a></li>
-        <li><a href="#">Team</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="#portfolio">Work</a></li>
+        <li><a href="#team">Team</a></li>
+        <li><a href="#contact">Contact</a></li>
       </ul>
     </div>
   </body>
