--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Broadway Design</title>
   </head>
   <body>
-
+<!-- Header Section -->
     <div id="header">
       <h1>Broadway Design</h1>
       <ul>
@@ -17,7 +17,7 @@
         <li><a href="#contact">Contact</a></li>
       </ul>
     </div>
-
+<!-- Process Section -->
     <div id="process">
       <h2>Our Process</h2>
         <img src="./resources/images/identify.svg" alt="Identify icon">
@@ -30,11 +30,11 @@
         <h3>Execute</h3>
         <p>We put everything we have into our work.</p>
     </div>
-
+<!-- NY Panel -->
     <div class="panel">
       <h3>Designed in New York</h3>
     </div>
-
+<!-- Information Section -->
       <div id="portfolio">
         <h3>Portfolio</h3>
         <p>Coming soon</p>
@@ -49,7 +49,7 @@
         <p>E-mail: test@example.com</p>
         <p>Twitter: @test</p>
       </div>
-
+<!-- Footer Section -->
     <div class="footer">
       <ul>
         <li>&copy; Broadway 2016</li>
